--- a/ViewStructure/ViewStructure/Views/Home/Index.cshtml
+++ b/ViewStructure/ViewStructure/Views/Home/Index.cshtml
@@ -1,5 +1,3 @@
-﻿@{ 
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+﻿<link rel="stylesheet"  href="~/css/test.css"/>
 
-<h3>Ana Sayfa</h3>
+<h3 class="changeColor">Ana Sayfa</h3>
